setup redux tookit

--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -13,7 +13,13 @@
     --foreground: #ededed;
   }
 }
-
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  margin: 0;
+}
+input[type="number"] {
+  -moz-appearance: textfield;
+}
 body {
   color: rgb(var(--foreground-rgb));
 }
@@ -45,4 +51,15 @@ body {
   83.33% {
     opacity: 0.4;
   }
+}
+@keyframes shake {
+  0% { transform: translateX(0); }
+  25% { transform: translateX(-5px); }
+  50% { transform: translateX(5px); }
+  75% { transform: translateX(-5px); }
+  100% { transform: translateX(0); }
+}
+
+.shake {
+  animation: shake 0.5s ease-in-out;
 }
