--- a/client/app/globals.css
+++ b/client/app/globals.css
@@ -13,6 +13,18 @@
     --foreground: #ededed;
   }
 }
+::-webkit-scrollbar {
+  width: 8px;
+}
+::-webkit-scrollbar-track {
+  background: #1771c6;
+}
+::-webkit-scrollbar-thumb {
+  background: #f5f5f5b0;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #32ae7e;
+}
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
   margin: 0;
@@ -53,11 +65,21 @@ body {
   }
 }
 @keyframes shake {
-  0% { transform: translateX(0); }
-  25% { transform: translateX(-5px); }
-  50% { transform: translateX(5px); }
-  75% { transform: translateX(-5px); }
-  100% { transform: translateX(0); }
+  0% {
+    transform: translateX(0);
+  }
+  25% {
+    transform: translateX(-5px);
+  }
+  50% {
+    transform: translateX(5px);
+  }
+  75% {
+    transform: translateX(-5px);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
 
 .shake {
